# MP3-manager

./: .gitignore  Application.cpp  CMakeLists.txt  Gui.cpp  Gui.h  Library.h  MediaInfo.cpp  MediaInfo.h  Runner.py  cPython.cpp  cPython.h  id3.py  main.cpp  media_info.txt
Dependencies/AGUI/: Button.cpp  Button.h  Text.cpp  Text.h  TextBox.cpp  TextBox.h  Window.cpp  Window.h  gui_lib.h  gui_utils.cpp  gui_utils.h
Dependencies/Andromeda/: AndromedaLib.h  AndromedaUtils.cpp  AndromedaUtils.h  Application.cpp  Camera.cpp  Camera.h  Model.cpp  Model.h  Window.cpp  Window.h  ini_parser.cpp  ini_parser.h
Dependencies/Andromeda/EngineCore/: Andromeda.h  AndromedaCoreLib.h  Buffers.cpp  Buffers.h  CoreUtils.cpp  CoreUtils.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Dependencies/freetype/include/freetype/: ftimage.h
Dependencies/glm/: README.md
Dependencies/glm/glm/detail/: type_quat.hpp  type_quat.inl
Dependencies/glm/glm/gtc/: quaternion.hpp
GUI/: Button.cpp  Button.h  Textbox.cpp  Textbox.h  gui-lib.h
mp3_tagger/: Runner.py  mp3.py
